Refactored responsive functionality. Slight glitch to be fixed on mobile hamburger menu.

--- a/code/styles/main.scss
+++ b/code/styles/main.scss
@@ -15,6 +15,7 @@ $reg-font-weight: 400;
 $thick-font-weight: 700;
 
 $trim-width: 960px;
+$nav-z-index: 100;
 
 @mixin box-reset
 {
@@ -28,6 +29,7 @@ $trim-width: 960px;
 
 html, body
 {
+    min-height: 101%;
     background: $dark-gray;
     font-family: "Open Sans", sans-serif;
     font-size: ($reg-unit - 3);
@@ -37,9 +39,79 @@ html, body
 
 header, nav, main, section, article, aside, footer {display: block;}
 
-#page-header, #main-nav
+main
 {
-    padding:$reg-unit;
+    padding: $reg-unit;
+    color: $light-cyan;
+}
+
+main h1, main h2, main h3, main h4, main h5, main h6
+{
+    color: $orange;
+    font-weight: $thin-font-weight;
+}
+
+a
+{
+    color: inherit;
+    text-decoration: none;
+}
+
+a:hover {text-decoration: underline;}
+
+main a {color: $pink;}
+
+form
+{
+    margin: auto;
+    max-width: ($trim-width / 2)
+}
+
+form > *
+{
+    display: block;
+    width: 100%;
+}
+
+input, select, textarea, button
+{
+    margin-bottom: $reg-unit;
+    border-radius: ($small-unit / 2);
+    padding: $small-unit;
+    background: $light-gray;
+    font-family: inherit;
+    color: $light-cyan;
+}
+
+textarea {min-height: 200px;}
+
+input[type=submit], button
+{
+    background: $orange;
+    color: $dark-gray;
+}
+
+hr {border: 1px solid;}
+
+.align-left {text-align: left;}
+.align-center {text-align: center;}
+.align-right {text-align: right;}
+
+.warning
+{
+    border-radius: ($small-unit / 2);
+    background: $pink;
+    color: $dark-gray;
+}
+
+.warning a
+{
+    color: $dark-gray;
+    font-weight: $thick-font-weight;
+}
+
+#page-header
+{
     color: $dark-gray;
     background: $orange;
     text-align: center;
@@ -47,60 +119,124 @@ header, nav, main, section, article, aside, footer {display: block;}
 
 #page-title
 {
-    text-align: center;
-    font-size: $large-unit;
+    float: left;
+    font-size: ($large-unit - $reg-unit);
     font-weight: $thin-font-weight;
 }
 
+#main-nav
+{
+    float: right;
+    background-color: $orange;
+}
+
+#main-nav-button
+{
+    display: none;
+    padding: ($small-unit - 5) $small-unit 0 $small-unit;
+    width: $large-unit;
+    cursor: pointer;
+}
+
+#main-nav-button hr {margin-top: ($small-unit - 5);}
+
 #main-nav ul
 {
-    margin:0;
     list-style: none;
     font-weight: $thick-font-weight;
 }
 
-main
+#main-nav ul li
 {
-    padding: $reg-unit;
-    color: $light-cyan;
+    display: inline-block;
+    margin: 0 $reg-unit;
+    padding: $small-unit;
 }
 
-.col-2, .col-3 {padding: $reg-unit 0;}
+.trim-box
+{
+    margin: auto;
+    max-width: $trim-width;
+    overflow: hidden;
+}
+
+.col-2
+{
+    padding: 5%;
+    width: 50%;
+    float: left;
+}
+
+.col-3
+{
+    padding: 5%;
+    width: 33.33%;
+    float: left;
+}
 
 .callout
 {
-    margin: $reg-unit (-1 * $reg-unit);
+    margin: $reg-unit (-$reg-unit);
     padding: $large-unit $reg-unit;
     background: $light-gray;
 }
 
-@media screen and (min-width: 641px)
+#page-footer
 {
-    .trim-box
+    margin-top: ($large-unit * 2);
+    color: $orange;
+    font-size: ($reg-unit - 7);
+    text-align: center;
+}
+
+/* mobile */
+@media screen and (max-width: 768px)
+{    
+    main {padding-top: ($large-unit * 2);}
+    
+    #page-header
     {
-        margin: auto;
-        max-width: $trim-width;
+        width: 100%;
+        height: ($large-unit - $small-unit);
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: ($nav-z-index + 1);
+    }
+
+    #page-title {font-size: ($large-unit / 2);}
+    
+    #main-nav
+    {
+        width: 0%;
+        opacity: 0;
         overflow: hidden;
+        float: none;
+        position: fixed;
+        top: ($large-unit - 10);
+        left: 0;
+        z-index: $nav-z-index;
+        text-align: left;
+        transition: 0.25s ease-in-out;
     }
 
-    .col-2
-    {
-        padding: 5%;
-        width:50%;
-        float: left;
-    }
-
-    .col-3
-    {
-        padding: 5%;
-        width: 33.33%;
-        float: left;
-    }
-
-    .callout > *
+    #main-nav-button
     {
         display: block;
-        margin: auto;
-        max-width: $trim-width + 100px;
+        float: left;
+    }
+
+    #main-nav ul li
+    {
+        display: block;
+        margin: $reg-unit 0;
+        padding: $small-unit;
+    }
+
+    .col-2, .col-3
+    {
+        padding: $reg-unit 0;
+        width: 100%;
+        float: none;
     }
 }
